crates/au-cli/tests/it/snapshots/it__scenarios__required-field-near-miss.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "required-field-absent",
      "message": "instance is missing required field 'size' (declared on 'widget') — did you mean 'siize'?",
      "related": [
        {
          "file": "<root>/scenarios/required-field-near-miss/type/widget.type.yaml",
          "line_col": {
            "end": {
              "col": 7,
              "line": 2
            },
            "start": {
              "col": 3,
              "line": 2
            }
          },
          "range": {
            "end": 14,
            "start": 10
          }
        },
        {
          "file": "<root>/scenarios/required-field-near-miss/widget-typo.md",
          "line_col": {
            "end": {
              "col": 6,
              "line": 6
            },
            "start": {
              "col": 1,
              "line": 6
            }
          },
          "range": {
            "end": 258,
            "start": 253
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/required-field-near-miss/widget-typo.md",
        "line_col": {
          "end": {
            "col": 13,
            "line": 5
          },
          "start": {
            "col": 7,
            "line": 5
          }
        },
        "range": {
          "end": 252,
          "start": 246
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 30,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/required-field-near-miss/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "required-field-near-miss"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "required-field-near-miss"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/required-field-near-miss/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "widget"
        ],
        "closure": [
          "widget"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "size",
            "origins": [
              {
                "name": "widget",
                "origin_path": "<root>/scenarios/required-field-near-miss/type/widget.type.yaml",
                "required": true,
                "shape": "Number"
              }
            ],
            "required": true,
            "shape": "Number"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 261,
                        "line_col": {
                          "end": {
                            "col": 9,
                            "line": 6
                          },
                          "start": {
                            "col": 8,
                            "line": 6
                          }
                        },
                        "start": 260
                      },
                      "file": "<root>/scenarios/required-field-near-miss/widget-typo.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": 7
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": 7
                }
              }
            ],
            "field": "siize"
          }
        ],
        "file": "<root>/scenarios/required-field-near-miss/widget-typo.md",
        "section_presence": null
      }
    ]
  }
}
