crates/au-cli/tests/it/snapshots/it__scenarios__required-meta-absent-type.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "required-meta-absent-type",
      "message": "type-def 'base' requires meta 'ghost-meta', which is not in the type graph",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/required-meta-absent-type/type/base.type.yaml",
        "line_col": {
          "end": {
            "col": 25,
            "line": 3
          },
          "start": {
            "col": 15,
            "line": 3
          }
        },
        "range": {
          "end": 45,
          "start": 35
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": true,
    "count": 0,
    "entries": []
  }
}
