crates/au-cli/tests/it/snapshots/it__scenarios__required-meta-missing.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "subtype-missing-required-meta",
      "message": "type-def 'tool' is concrete but does not declare the required meta 'pm'; a base in its closure obligates it",
      "related": [
        {
          "file": "<root>/scenarios/required-meta-missing/type/base.type.yaml",
          "line_col": {
            "end": {
              "col": 1,
              "line": 4
            },
            "start": {
              "col": 1,
              "line": 1
            }
          },
          "range": {
            "end": 38,
            "start": 0
          }
        }
      ],
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/required-meta-missing/type/tool.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 3
          },
          "start": {
            "col": 1,
            "line": 1
          }
        },
        "range": {
          "end": 25,
          "start": 0
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 27,
                        "line_col": {
                          "end": {
                            "col": 28,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/required-meta-missing/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "required-meta-missing"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "required-meta-missing"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/required-meta-missing/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
