crates/au-cli/tests/it/snapshots/it__scenarios__rgb-tuple.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 15,
                        "line_col": {
                          "end": {
                            "col": 16,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/rgb-tuple/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "rgb-tuple"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "rgb-tuple"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/rgb-tuple/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "swatch"
        ],
        "closure": [
          "swatch"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "fill",
            "origins": [
              {
                "name": "swatch",
                "origin_path": "<root>/scenarios/rgb-tuple/type/swatch.type.yaml",
                "required": true,
                "shape": "rgb"
              }
            ],
            "required": true,
            "shape": "rgb"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 41,
                        "line_col": {
                          "end": {
                            "col": 25,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 23
                      },
                      "file": "<root>/scenarios/rgb-tuple/teal.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "brand": "rgb",
                      "elements": [
                        {
                          "value": {
                            "kind": "scalar",
                            "value": 0
                          }
                        },
                        {
                          "value": {
                            "kind": "scalar",
                            "value": 128
                          }
                        },
                        {
                          "value": {
                            "kind": "scalar",
                            "value": "#ff"
                          }
                        }
                      ],
                      "kind": "tuple"
                    }
                  }
                ],
                "value": {
                  "brand": "rgb",
                  "elements": [
                    {
                      "value": {
                        "kind": "scalar",
                        "value": 0
                      }
                    },
                    {
                      "value": {
                        "kind": "scalar",
                        "value": 128
                      }
                    },
                    {
                      "value": {
                        "kind": "scalar",
                        "value": "#ff"
                      }
                    }
                  ],
                  "kind": "tuple"
                }
              }
            ],
            "field": "fill"
          }
        ],
        "file": "<root>/scenarios/rgb-tuple/teal.md",
        "section_presence": null
      }
    ]
  }
}
